--- a/Framework/MistSDK.framework/Modules/MistSDK.swiftmodule/arm64-apple-ios.abi.json
+++ b/Framework/MistSDK.framework/Modules/MistSDK.swiftmodule/arm64-apple-ios.abi.json
@@ -673,21 +673,21 @@
   },
   "ConstValues": [
     {
-      "filePath": "\/Users\/dinkark\/Documents\/iOS\/iOS-Framework\/MistSDK\/LocalCloud.swift",
+      "filePath": "\/Users\/vishwakarmar\/JuniperMobile\/mistsys\/CoreSDK\/iOS-Framework\/MistSDK\/LocalCloud.swift",
       "kind": "FloatLiteral",
       "offset": 704,
       "length": 3,
       "value": "0.0"
     },
     {
-      "filePath": "\/Users\/dinkark\/Documents\/iOS\/iOS-Framework\/MistSDK\/LocalCloud.swift",
+      "filePath": "\/Users\/vishwakarmar\/JuniperMobile\/mistsys\/CoreSDK\/iOS-Framework\/MistSDK\/LocalCloud.swift",
       "kind": "FloatLiteral",
       "offset": 730,
       "length": 3,
       "value": "0.0"
     },
     {
-      "filePath": "\/Users\/dinkark\/Documents\/iOS\/iOS-Framework\/MistSDK\/LocalCloud.swift",
+      "filePath": "\/Users\/vishwakarmar\/JuniperMobile\/mistsys\/CoreSDK\/iOS-Framework\/MistSDK\/LocalCloud.swift",
       "kind": "StringLiteral",
       "offset": 760,
       "length": 2,
